Magazine Section and slider text

--- a/ngo.html
+++ b/ngo.html
@@ -91,6 +91,7 @@
                   <li><a href="events.html" title="events">Events</a></li>
                   <li><a href="ngo.html" title="campaigns">NGO Collaborated</a></li>
                   <li><a href="sponsors.html" title="sponsers">Sponsors</a></li>
+                  <li><a href="departments.html" title="sponsers">Departments</a></li>
                   <li><a href="team24.html" title="team">Team</a></li>
                   <li><a class="smoothscroll" href="#contact" title="contact">Contact</a></li>
               </ul>
