--- a/team24.html
+++ b/team24.html
@@ -344,6 +344,7 @@
             <li><a href="ngo.html" title="campaigns">Ngo Collaborated</a></li>
             
             <li><a href="sponsors.html" title="sponsers">Sponsors</a></li>
+            <li><a href="departments.html" title="sponsers">Departments</a></li>
             <li><a href="team24.html" title="team">Team</a></li>
             <!-- <li><a  class="smoothscroll" href="#contact" title="contact">Contact</a></li> -->
           </ul>
@@ -978,7 +979,7 @@
       </section>
 
       <!-- ------Creatives--------- -->
-      <h1>Photography Admin</h1>
+      <h1>Photography HOD</h1>
       <section>
         <div class="cols">
           <div class="col" ontouchstart="this.classList.toggle('hover');">
@@ -989,7 +990,7 @@
                     <img src="team/kshamta..pdf-image-023.jpg">
                   </div>
                   <div class="caption">
-                    <p>Photography Admin</p>
+                    <p>Photography HOD</p>
                     <h4 style="font-family: 'Lato', sans-serif, cursive">
                       7710987541
                     </h4>
@@ -1012,7 +1013,7 @@
                     <img src="team/kshamta..pdf-image-024.jpg">
                   </div>
                   <div class="caption">
-                    <p>Photography Admin</p>
+                    <p>Photography HOD</p>
                     <h4 style="font-family: 'Lato', sans-serif, cursive">
                       9610005883
                     </h4>
