Blog section and department addition

--- a/departments.html
+++ b/departments.html
@@ -133,7 +133,12 @@
           <!-- Marketing Department -->
           <div class="department">
               <h2>Marketing</h2>
-              <p>Every sponsor you see and every financial support received, the marketing department of Kshamta SRF has a crucially impactful role to play. From meeting with well-established companies, negotiating and securing food donations or refreshments, and bringing in hampers that make our events super successes— this is what the marketing department is all about. Being exposed to such ventures will further propel you in the corporate landscape and business set-up.</p>
+              <p>Every sponsor you see and every financial support received, the marketing department of
+                Kshamta SRF has a crucially impactful role to play. From meeting with well-established
+                companies, negotiating and securing food donations or refreshments, and bringing in hampers
+                that make our events super successes— this is what the marketing department is all about.
+                Being exposed to such ventures will further propel you in the corporate landscape and business
+                set-up. </p>
               <h3>Benefits of working in Marketing Department</h3>
               <ul>
                   <li>Gain hands-on experience: Develop skills in marketing strategies, campaign execution, and brand management.</li>
@@ -146,7 +151,12 @@
           <!-- Public Relations Department -->
           <div class="department">
               <h2>Public Relations</h2>
-              <p>The Public Relations (PR) Department at Kshamta functions as the organization's primary voice and image. Its primary objectives include raising awareness, cultivating goodwill, and engaging with diverse stakeholders, including the public, media, corporate partners, and beneficiaries.</p>
+              <p>The Public Relations (PR) Department at Kshamta, a prominent social responsibility forum,
+                functions as the organization's primary voice and image. Its primary objectives include raising
+                awareness, cultivating goodwill, and engaging with diverse stakeholders, including the public,
+                media, corporate partners, and beneficiaries. The department plays a crucial role in aligning the
+                forum’s mission and vision with public perceptions, ensuring consistent and meaningful
+                interactions with its audience.</p>
               <h3>Benefits of working in the PR Department</h3>
               <ul>
                   <li>Collaborate with NGOs and foundations: Build relationships with other non-profit organizations and foundations.</li>
@@ -208,7 +218,12 @@
           <!-- Social Media Department -->
           <div class="department">
               <h2>Social Media</h2>
-              <p>The Social Media Department handles our online presence on various platforms and brainstorms creative and engaging content.</p>
+              <p>With social media being the stamp of approval For virtually everything nowadays, our forum
+                would simply be incomplete without the Social Media Department. From handling our online
+                presence on Instagram, LinkedIn, X to brainstorming the most creative and engaging Reel Ideas
+                to captivate our supporters, the social media team does it all, from A to Z!
+                As a member of this department, you would learn a great deal about spreading awareness
+                using online tools, recording, editing and uploading posts, and managing a fanbase. </p>
               <h3>Benefits of working in the Social Media Department</h3>
               <ul>
                   <li>Develop social media marketing skills: Learn to create engaging content and manage social media campaigns.</li>
@@ -220,7 +235,16 @@
           <!-- Hospitality Department -->
           <div class="department">
               <h2>Hospitality</h2>
-              <p>The Hospitality Department is responsible for planning the flow of the event and ensuring guests feel welcome.</p>
+              <p>The Hospitality Department is a brand-new department at Kshamta which optimizes the
+                performance of the committee through its multiple roles throughout the process of conducting an
+                event. Hospitality members are firstly responsible for planning the flow of the event and
+                personally inviting faculty members. During the event, they greet the guests and faculty,
+                ensuring that they feel welcome. Furthermore, the Hospitality Department gathers valuable
+                feedback for each event from members as well as from any organizations who collaborated.
+                Hospitality members have the opportunity to interact with a variety of different people and
+                expand their soft skills. Furthermore, members develop their warmth and compassion,
+                embodying the spirit of Kshamta.
+                </p>
               <h3>Benefits of working in the Hospitality Department</h3>
               <ul>
                   <li>Opportunity to interact with a variety of different people and expand soft skills.</li>
@@ -236,19 +260,46 @@
               <ul>
                   <li>Creative Expression: Opportunity to express creativity and experiment with different styles.</li>
                   <li>Technical Skills Development: Hands-on experience with professional photography equipment.</li>
+                  <li>Collaboration and Teamwork: Development of teamwork and collaboration skills, working
+                    towards a common goal.</li>
               </ul>
           </div>
 
           <!-- Admin Department -->
           <div class="department">
               <h2>Admin</h2>
-              <p>The administration department oversees attendance and ensures record-keeping is correct during events.</p>
+              <p>The administration department oversees attendance and ensures record-keeping is correct
+                during events. It thus acts as the backbone of the smooth-running operations. Working in this
+                department helps to develop organizational skills, attention to detail, and time management
+                while improving knowledge of working with Excel, creating Google Forms, and streamlining data
+                management processes.</p>
               <h3>Benefits of working in the Admin Department</h3>
               <ul>
                   <li>Gain administrative experience: Develop skills in office management and data entry.</li>
                   <li>Learn non-profit management: Understand the inner workings of a non-profit organization.</li>
+                  <li>Develop organizational skills: Improve time management, prioritization, and task
+                    management</li>
+                  <li>Support a noble cause: Contribute to the smooth operation of an organization making a
+                    positive impact</li>
               </ul>
           </div>
+
+          <div class="department">
+            <h2>Kshamta</h2>
+            <p>Kshamta is the Social Responsibility Forum of SVKM’S SPP-SPTM NMIMS. It is a community which works for the betterment of our society, especially people in need. Kshamta is an active platform for students to use their concern for public welfare and resources to make a positive impact on society. For the past 10 years, Kshamta has put tremendous efforts to do its part and make a difference. It has organized a number of successful events which have received magnificent responses. These are small steps taken to inculcate virtues of an individual’s responsibility towards the society in our students.</p>
+            <h3>Importance of Certificates from Kshshamta</h3>
+            <ul>
+                <li>Recognized credentials: Kshshamta's certificates are recognized by other non-profit
+                    organizations, corporations, and academic institutions.
+                    </li>
+                <li>Demonstrated skills and experience: Certificates from Kshshamta demonstrate your skills
+                    and experience in marketing, PR, admin, or social media.</li>
+                <li>Career advancement opportunities: Kshshamta's certificates can be highlighted in job
+                    applications, resumes, and LinkedIn profiles</li>
+                <li>Networking opportunities: Certificates from Kshshamta can open doors to new networking
+                    opportunities, collaborations, and partnerships.</li>
+            </ul>
+        </div>
 
       </div> <!-- end row -->
   </section> <!-- end departments -->
