--- a/index.html
+++ b/index.html
@@ -171,6 +171,9 @@
               <a class="smoothscroll" href="#about" title="about">About</a>
             </li>
             <li>
+              <a class="smoothscroll" href="#blogs" title="blogs">Blogs</a>
+            </li>
+            <li>
               <a href="sponsorpack.html" title="social fest">Sponsorship Package</a>
             </li>
             <li><a href="events.html" title="events">Events</a></li>
