--- a/events.html
+++ b/events.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Kshamta | SRF</title>
     <meta name="description" content="Kshamta is the Social Responsibility Forum of SVKM’S SPP-SPTM NMIMS. It is a community which works for the betterment of our society, especially people in need. Kshamta is an active platform for students to use their concern for public welfare and resources to make a positive impact on society. For the past 10 years, Kshamta has put tremendous efforts to do its part and make a difference. It has organized a number of successful events which have received magnificent responses. These are small steps taken to inculcate virtues of an individual’s responsibility towards the society in our students.">
-    <meta name="author" content="">
+    <meta name="author" content="Soham Mokal">
 
     <!-- mobile specific metas
     ================================================== -->
