--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
     ================================================== -->
     <meta charset="utf-8">
     <title>Kshamta | SRF</title>
-    <meta name="description" content="Kshamta is the Social Responsibility Forum of SVKM’S SPP-SPTM NMIMS. It is a community which works for the betterment of our society, especially people in need. Kshamta is an active platform for students to use their concern for public welfare and resources to make a positive impact on society. For the past 10 years, Kshamta has put tremendous efforts to do its part and make a difference. It has organized a number of successful events which have received magnificent responses. These are small steps taken to inculcate virtues of an individual’s responsibility towards the society in our students.">
+    <meta name="description" content="Kshamta, the Social Responsibility Forum of SVKM's SPP-SPTM NMIMS, empowers students to create a positive impact on society through community welfare initiatives. For over 10 years, Kshamta has organized impactful events, fostering social responsibility and driving change for people in need. Join us in making a difference.">
     <meta name="author" content="Soham Mokal">
-
+    
     <!-- mobile specific metas
     ================================================== -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -1038,7 +1038,7 @@
     ================================================== -->
     <div id="preloader">
       <div id="loader">
-        <img src="images/animated.svg" alt="" style="height: 100px">
+        <img src="images/animated.svg" alt="animated" style="height: 100px">
         <!--?xml version="1.0" encoding="UTF-8" standalone="no"?-->
       </div>
     </div>
@@ -1049,6 +1049,41 @@
     <script src="js/plugins.js"></script>
     <script src="js/main.js"></script>
     <script src="js/owl.js"></script>
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "NGO",
+        "name": "Kshamta - Social Responsibility Forum",
+        "url": "https://kshamtasrf.com", 
+        "logo": "https://i.ibb.co/St9DzZH/logo-white.png", 
+        "description": "Kshamta is the Social Responsibility Forum of SVKM’s SPP-SPTM NMIMS, dedicated to community welfare and creating a positive societal impact.",
+        "foundingDate": "2013",
+        "founder": {
+          "@type": "Person",
+          "name": "Soham Mokal"
+        },
+        "address": {
+          "@type": "PostalAddress",
+          "streetAddress": "SVKM’s SPP-SPTM NMIMS Campus",
+          "addressLocality": "Mumbai",
+          "addressRegion": "MH",
+          "postalCode": "400056",
+          "addressCountry": "IN"
+        },
+        "contactPoint": {
+          "@type": "ContactPoint",
+          "contactType": "Customer Service",
+          "email": "kshamtasrfmarketing94@gmail.com",
+          "telephone": "+91-8146551492",
+          "areaServed": "IN"
+        },
+        "sameAs": [
+          "https://x.com/kshamtanmims",
+          "https://www.instagram.com/kshamtasrf"
+        ]
+      }
+      </script>
+      
 <!-- JavaScript for slideshow -->
 <script>
  const slideTimers = {}; // Store timers for each slideshow
