--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
     ================================================== -->
     <meta charset="utf-8">
     <title>Kshamta | SRF</title>
-    <meta name="description" content="Kshamta, the Social Responsibility Forum of SVKM's SPP-SPTM NMIMS, empowers students to create a positive impact on society through community welfare initiatives. For over 10 years, Kshamta has organized impactful events, fostering social responsibility and driving change for people in need. Join us in making a difference.">
+    <meta name="description" content="Kshamta, the Social Responsibility Forum of SVKM's SPP-SPTM NMIMS, fosters social responsibility through impactful events and community welfare initiatives. Join us to make a difference.">
     <meta name="author" content="Soham Mokal">
+    <link rel="canonical" href="https://www.kshamtsrf.com/">
+
     
     <!-- mobile specific metas
     ================================================== -->
