--- a/departments.html
+++ b/departments.html
@@ -74,10 +74,13 @@
   <!-- header
   ================================================== -->
   <header class="s-header">
-      <div class="header-logo">
-          <a class="site-logo" href="index.html">
-              <img src="logo/logo_white_round.png" alt="Homepage" style="height: auto;transform: scale(0.9) translateX(22px);">
-          </a>
+    <div class="header-logo">
+        <a class="site-logo" href="index.html">
+          <img src="logo/logo_white_round.png" alt="Homepage" style="height: auto; transform: scale(0.9) translateX(22px)">
+        </a>
+        <a class="site-logo second-logo" href="index.html">
+          <img src="logo/nmims.jpeg" alt="Second Logo" style="height: auto; transform: scale(0.9) translateX(30px)">
+        </a>
       </div> <!-- end header-logo -->
 
       <nav class="header-nav">
@@ -287,14 +290,14 @@
           <div class="department">
             <h2>Kshamta</h2>
             <p>Kshamta is the Social Responsibility Forum of SVKM’S SPP-SPTM NMIMS. It is a community which works for the betterment of our society, especially people in need. Kshamta is an active platform for students to use their concern for public welfare and resources to make a positive impact on society. For the past 10 years, Kshamta has put tremendous efforts to do its part and make a difference. It has organized a number of successful events which have received magnificent responses. These are small steps taken to inculcate virtues of an individual’s responsibility towards the society in our students.</p>
-            <h3>Importance of Certificates from Kshshamta</h3>
+            <h3>Importance of Certificates from Kshamta</h3>
             <ul>
-                <li>Recognized credentials: Kshshamta's certificates are recognized by other non-profit
+                <li>Recognized credentials: Kshamta's certificates are recognized by other non-profit
                     organizations, corporations, and academic institutions.
                     </li>
-                <li>Demonstrated skills and experience: Certificates from Kshshamta demonstrate your skills
+                <li>Demonstrated skills and experience: Certificates from Kshamta demonstrate your skills
                     and experience in marketing, PR, admin, or social media.</li>
-                <li>Career advancement opportunities: Kshshamta's certificates can be highlighted in job
+                <li>Career advancement opportunities: Kshamta's certificates can be highlighted in job
                     applications, resumes, and LinkedIn profiles</li>
                 <li>Networking opportunities: Certificates from Kshshamta can open doors to new networking
                     opportunities, collaborations, and partnerships.</li>
