--- a/index.html
+++ b/index.html
@@ -163,7 +163,11 @@
         <a class="site-logo" href="index.html">
           <img src="logo/logo_white_round.png" alt="Homepage" style="height: auto; transform: scale(0.9) translateX(22px)">
         </a>
+        <a class="site-logo second-logo" href="index.html">
+          <img src="logo/nmims.jpeg" alt="Second Logo" style="height: auto; transform: scale(0.9) translateX(30px)">
+        </a>
       </div>
+      
       <!-- end header-logo -->
 
       <nav class="header-nav">
@@ -289,7 +293,7 @@
     <section id="about" class="s-about" style="background-color: white; background-image: url(images/bg123.png)">
       <div class="row section-header" data-aos="fade-up">
         <div class="featured-text" onclick="window.location.href='magazine.html';">
-          <p>Featured in Stylesheet Magazine</p>
+          <p>Featured in Style Speak Magazine</p>
         </div>
         <br>
         <br>
