--- a/events.html
+++ b/events.html
@@ -65,6 +65,9 @@
         <a class="site-logo" href="index.html">
           <img src="logo/logo_white_round.png" alt="Homepage" style="height: auto; transform: scale(0.9) translateX(22px)">
         </a>
+        <a class="site-logo second-logo" href="index.html">
+          <img src="logo/nmims.jpeg" alt="Second Logo" style="height: auto; transform: scale(0.9) translateX(30px)">
+        </a>
       </div>
       <!-- end header-logo -->
 
