--- a/magazine.html
+++ b/magazine.html
@@ -74,10 +74,13 @@
   <!-- header
   ================================================== -->
   <header class="s-header">
-      <div class="header-logo">
-          <a class="site-logo" href="index.html">
-              <img src="logo/logo_white_round.png" alt="Homepage" style="height: auto;transform: scale(0.9) translateX(22px);">
-          </a>
+    <div class="header-logo">
+        <a class="site-logo" href="index.html">
+          <img src="logo/logo_white_round.png" alt="Homepage" style="height: auto; transform: scale(0.9) translateX(22px)">
+        </a>
+        <a class="site-logo second-logo" href="index.html">
+          <img src="logo/nmims.jpeg" alt="Second Logo" style="height: auto; transform: scale(0.9) translateX(30px)">
+        </a>
       </div> <!-- end header-logo -->
 
       <nav class="header-nav">
