--- a/team24.html
+++ b/team24.html
@@ -324,8 +324,11 @@
       <div class="header-logo">
         <a class="site-logo" href="index.html">
           <img src="logo/logo_white_round.png" alt="Homepage" style="height: auto; transform: scale(0.9) translateX(22px)">
+          <img src="logo/nmims.jpeg" alt="Second Logo" style="height: auto; transform: scale(0.9) translateX(22px) translateY(-70px)">
         </a>
+        
       </div>
+      
       <!-- end header-logo -->
 
       <nav class="header-nav">
