--- a/index.html
+++ b/index.html
@@ -749,6 +749,13 @@
             With a grand total of 111 enthusiastic donors including Dr. Meena Chintamaneni, the Pro-Vice Chancellor of NMIMS, the event transpired to be a proud victory for Kshamta! “Karuna” jump-started the academic year with its invigorating success, filling the hearts of all its on-lookers with optimism.
             </p>
         </div>
+
+        <div class="blog-post" data-aos="fade-up">
+          <h4>Breast Cancer Awareness</h4>
+          <p>
+            On September 25th, 2024, Kshamta, the social responsibility forum of SPP-SPTM SVKM’s NMIMS, conducted a comprehensive Breast Cancer Awareness Session in collaboration with TATA Trust, marking the occasion of World Pharmacist Day with a focus on promoting pink health. The event featured TATA Trust representatives and distinguished surgical oncologist Dr. Amar Deshpande, who presented on various aspects of breast cancer awareness, including symptoms, prevention, and the significance of self-examination. A screening of TATA Trust's "Gaanth Pe Dhyan" campaign film underscored the importance of early detection. Dr. Deshpande shared valuable insights on risk factors and prevention methods, addressing inquiries from the engaged audience. The session concluded with expressions of gratitude and active involvement from students and faculty, effectively advancing awareness and dispelling the stigma surrounding breast cancer.
+          </p>
+        </div>
         <!-- Add more blog posts as needed -->
       </div>
     </section>
